# COMSOL

./: .gitignore  AddIntegralBranch.C  AddSignalTrees copie.C  AddSignalTrees.C  Analyse.C  CMakeLists.txt  ComputeGain.sh  ComputeIBF.sh  ComputeSignal.sh  Convolute.C  DrawSignal.C  GetAvalancheSize.C  GetGain.C  GetIbf.C  GetNumberOfCharges.C  IBF_summary.txt  PhotonConversionRatio.C  Process.sh  README.md  README_COMSOL.txt  RepareFile.C  ResVsIbf.C  Resolution.C  Spectrum.C  Transparency.C  WhatPossibilities.sh  _Data.C  _Functions.C  _Geometry.C  _Utils.C  avalanche  avalanche.C  drawGeometry  drawGeometry.C  feSignal  feSignal.C  gain  gain.C  gem.C  ibf  (+16 more)
COMSOL_data/model2/: cell.mph
COMSOL_data/model4-Maxence-data/: cell.mph
COMSOL_data/model6/: cell.mph  ewfield_460V.txt  mesh.mphtxt
Include/: Electrons.C  Functions.C  Geometry.C  Ibf.C  Initiate.C  Memo.txt  Spectrum.C  Transparency.C  Utils.C
obsolete/: Convolute.C  _Data_old.C  drawGeometry.C  feSignal.C  gain.C
rootFiles /Ar/: spectrum_Fe55.root
rootFiles /Ar/model1/: gain_320V.root  gain_340V.root  gain_360V.root  gain_380V.root  gain_400V_convolution.root  gain_420V.root  gain_440V.root  gain_440V_1.root  ibf_340V.root  ibf_360V.root  ibf_380V.root  ibf_400V.root  test.root
rootFiles /Ar/model3/: gain_340V_convolution.root  ibf_320V.root  ibf_400V.root  ibf_420V.root
rootFiles /Ne/: spectrum_Fe55.root
rootFiles/Ar-CO2/: spectrum_Fe55.root
rootFiles/Ar-CO2/model1/: gain_350V.root  ibf_350V.root
rootFiles/Ar-CO2/model4/: Fe_spectrum_convoluted_350V.root  Fe_spectrum_convoluted_360V.root  Fe_spectrum_convoluted_370V.root  Fe_spectrum_convoluted_380V.root  gain_350V.root  gain_360V.root  gain_370V.root  gain_380V.root
rootFiles/Ar-iC4H10/: spectrum_Fe55.root
testIBF/: AnaGetIbf.C
unused/: AddIntegralBranch.C  AddSignalTrees.C  Analyse.C  GetNumberOfCharges.C  TestGetIbfAndGain.C  drawGeometry.C  feSignal  ibf.C  loopProcess.sh  makefile  signal-obsolete.C
(+134 files in other folders)
